# rust-gui

./: .gitignore  Cargo.toml
assets/: box.fs  box.vs
src/: lib.rs  main.rs
src/core/: component.rs  element.rs  mod.rs
src/graphics/: mod.rs  rectangle_shape.rs
src/layout/: alignment.rs  calculated.rs  common.rs  constraints.rs  dimension.rs  directional.rs  element.rs  mock.rs  mod.rs  padding.rs  position.rs  rect.rs
src/mock/: layout.rs  mod.rs
src/parsing/: mod.rs
