[package]
name = "rust-gui"
version = "0.1.0"
authors = [
  "Enitoni <root@enitoni.dev>",
  "Nyrox <root@nyrox.dev>"
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]

# THESE ARE ONLY FOR TESTING PURPOSES, REMOVE THEM BEFORE PUBLISHING!
rand="0.8"
sfml="0.15.1"